--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8" />
   <link rel="icon" href="./favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="theme-color" content="#fff" />
+  <meta name="description" content="Brand Kiln | Creative Brand Management Solutions | Complete Technology Development Solutions
+  " />
   <link rel="apple-touch-icon" href="" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
